--- a/cut-object.html
+++ b/cut-object.html
@@ -240,7 +240,9 @@ doesn't have a worker, but it uses a similar system.
 
                 // private properties for use by rm-plots module, never notified
                 _rm_spa_other: null,
+                _rm_spa_max_other: null,
                 _rm_dir_other: null,
+                _rm_dir_max_other: null,
                 _rm_speed_other: null,
                 _rm_other_options: {},
                 _rm_is_on_worker: false,
